# beewarm

./: LICENSE.txt  README.md
doc/: hardware_documentation.txt
src/: beerun.sh  database_commands.txt  databasedump.sh  devices_mapping.txt  init.sh  mailtext.txt
src/arduino/temperature_adc/: communication_structs.h  temperature_adc.ino
src/install_systemd/: beereader.service  beereader.timer  databasecsv.service  databasecsv.timer  duck.service  duck.timer  init.service
src/protocol_definitions/: communication_structs.h
src/raspi/: CMakeLists.txt  MAC_device_parser.cpp  MAC_device_parser.h  bluetooth_manager.cpp  bluetooth_manager.h  database_manager.cpp  database_manager.h  main.cpp  scheduler.cpp  scheduler.h  serial_communication.cpp  serial_communication.h
